--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>El blog del Oso Panda</h1>
-        <p>Este es el primer parrafo</p>
+        <div id="container">
+            <div id="post">
+                <h1>El blog del Oso Panda</h1>
+                <p>Este es el primer parrafo</p>
+            </div>
+        </div>
     </body>
 </html>
