--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,17 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="container">
             <div id="post">
                 <h1>El blog del Oso Panda</h1>
                 <p>Este es el primer parrafo</p>
+                <p>
+                    Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.
+                    excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
+                </p>
             </div>
         </div>
     </body>
